--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "mean-website-test",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "12.x"
+  },
+  "main": "app.js",
   "scripts": {
     "start": "node ./bin/www"
   },
@@ -9,9 +13,14 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.1.3",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
-  }
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ]
 }
